--- a/c3.md
+++ b/c3.md
@@ -4,15 +4,18 @@
 
 ```assembly
 ORG  0000H
-MOV  A, #07FH   ; A = 07Fh = 0111 1111b 
+MOV  A, #07FH   ; A = 07FH 
 SETB C          ; C = 1 
-RLC  A          ; A = 1111 1110b
+RLC  A          ; A = 3FH, C = 0
 MOV  R1, #30H   ; R1 = 30H
 MOV  30H, #89H  ; 30H = 89H
-MOV  @R1, A     ; 30H = 1111 1110b
-ADD  A, R1      ; A = 
-ORL  A, 30H     ; A = 
-END
-SWAP A
+MOV  @R1, A     ; 30H = 3FH
+ADD  A, R1      ; A = 81H 
+ORL  A, 30H     ; A = D1H
+SWAP A          ; A = D1H
 END
 ```
+
+1. A   = D1H
+2. R1  = 30H  
+3. 30H = 3FH
